# Metashapes

./: .gitignore  Example.ipynb  Generator_test.ipynb  LICENSE  README.md  pyproject.toml
graphify-out/: graph.html
graphify-out/2026-05-27/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
metashapes/: __init__.py  analysis.py  canvas.py  fabtol.py  library.py  metalayout.py  metasurface.py  patterned_layer.py  shape.py  transform.py  unit_cell.py  utils.py
metashapes/adapters/: __init__.py  numpy.py  shapely.py  torch.py  yaml.py
metashapes/adapters/shapely/: conics.py  dispatch.py  periodic.py  polygons.py  transforms.py
metashapes/generators/: base.py  config.py  random.py
metashapes/generators/samplers/: __init__.py  conics.py  periodic.py  polygons.py  quads.py
metashapes/lattice/: unit_cell.py
metashapes/shape/: __init__.py  base.py  boolean.py  primitives.py  transforms.py
metashapes/shape/primitives/: conics.py  periodic.py  polygons.py
metashapes/utils/: metaconv.py  shp.py
tests/adapters/: test_shapely.py
tests/generators/: test_random_generator.py
tests/lattice/: test_unit_cell.py
tests/shape/: test_conics.py  test_periodic.py  test_polygons.py
