# pyproject.toml

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Metashapes"
version = "0.1.0"
description = "Geometry utilities for metasurfaces and layout (Shapely/KLayout/gdstk)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "RodionovSA" }]
license = { text = "MIT" }  # or your license
dependencies = [
]

[project.urls]
Homepage = "https://github.com/RodionovSA/Metashapes"

# If you use a src/ layout, keep this. If your package is top-level, remove this block.
[tool.setuptools.packages.find]
include = ["metashapes*"]